ayehiazaran/Home task-13 (14.K8s. Deployment)/k8s-jenkins/k8s/jenkins-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  labels:
    app: jenkins
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: jenkins
